--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" defer></script>
+    <script src="/js/utilities/cleaner.js" defer></script>
+    <script src="/js/utilities/renderer.js" defer></script>
+    <script src="/js/agendaApp.js" defer></script>
+    <script src="/js/main.js" defer></script>
+    
 </head>
 
 <body>
-    video 18
+    
 </body>
 
 </html>
