--- a/encrypter/index.html
+++ b/encrypter/index.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encrypter en Decrypter</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/main.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./src/js/Cleaner/Cleaner.js" defer></script>
+    <script src="./src/js/Renderer/Renderer.js" defer></script>
+    <script src="./src/js/Decrypter/Decrypter.js" defer></script>
+    <script src="./src/js/Encrypter/Encrypter.js" defer></script>
+    <script src="./src/js/API/Api.js" defer></script>
+    <script src="./main.js" defer></script>
 </head>
 
 <body>
-    
+    video 19
+
 </body>
 
 </html>
