--- a/yubtub/index.html
+++ b/yubtub/index.html
@@ -46,7 +46,7 @@
                     <p class="yubtub__text">Lorem ipsum..</p>
                 </li>
             </ul>
-            <textarea class="yubtub__textarea" rows="1" placeholder="Jouw comment"></textarea>
+            <textarea class="yubtub__textarea" rows="" placeholder="Jouw comment"></textarea>
         </main>
         <aside class="yubtub__aside">
             <video src="./scr/videos/video--1.mp4" class="yubtub__video"></video>
