--- a/yubtub/index.html
+++ b/yubtub/index.html
@@ -18,7 +18,7 @@
         <main class="yubtub__main">
             <section class="yubtub__section yubtub__section--video">
                 <figure class="yubtub__figure">
-                    <i class="fa-regular fa-star yubtub__star"></i>
+                    <i class="fa-regular fa-star yubtub__icon yubtub__icon--starTop"></i>
                     <video src="./scr/videos/video--1.mp4" class="yubtub__video"></video>
                     <div class="yubtub__group">
                         <div class="yubtub__group--left">
@@ -26,8 +26,8 @@
                             <span class="yubtub__p">Lorem ipsum</span>
                         </div>
                         <div class="yubtub__group--right">
-                            <i class="fa-regular fa-star yubtub__icon"></i>
-                            <i class="fa-solid fa-right-long yubtub__icon"></i>
+                            <i class="fa-regular fa-star yubtub__icon yubtub__icon--starBottom"></i>
+                            <i class="fa-solid fa-right-long yubtub__icon yubtub__icon--arrow"></i>
                         </div>
                     </div>
                 </figure>
@@ -49,11 +49,11 @@
             <textarea class="yubtub__textarea" rows="" placeholder="Jouw comment"></textarea>
         </main>
         <aside class="yubtub__aside">
-            <video src="./scr/videos/video--1.mp4" class="yubtub__video"></video>
-            <video src="./scr/videos/video--1.mp4" class="yubtub__video"></video>
-            <video src="./scr/videos/video--1.mp4" class="yubtub__video"></video>
-            <video src="./scr/videos/video--1.mp4" class="yubtub__video"></video>
-            <video src="./scr/videos/video--1.mp4" class="yubtub__video"></video>
+            <video src="./scr/videos/video--1.mp4" class="yubtub__nextVideo"></video>
+            <video src="./scr/videos/video--2.mp4" class="yubtub__nextVideo"></video>
+            <video src="./scr/videos/video--1.mp4" class="yubtub__nextVideo"></video>
+            <video src="./scr/videos/video--1.mp4" class="yubtub__nextVideo"></video>
+            <video src="./scr/videos/video--1.mp4" class="yubtub__nextVideo"></video>
         </aside>
     </div>
     
