Added textarea in the Comment class

--- a/yubtub/index.html
+++ b/yubtub/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b1a8b29774.js" crossorigin="anonymous"></script>
-    <!-- <script src="./scr/js/main.js" defer></script> -->
+    <script src="./scr/js/main.js" defer></script>
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <p class="header__p">Milou</p>
     </header>
     <div class="yubtub">
@@ -56,7 +56,7 @@
             <video src="./scr/videos/video--1.mp4" class="yubtub__nextVideo"></video>
         </aside>
     </div>
-    
+    -->
 </body>
 </html>
 
