--- a/yubtub/index.html
+++ b/yubtub/index.html
@@ -57,6 +57,8 @@
         </aside>
     </div>
     -->
+    <!-- - Comment array maken
+    - Sterren toevoegen bij de aside -->
 </body>
 </html>
 
